--- a/index.html
+++ b/index.html
@@ -13,9 +13,19 @@
     <![endif]-->
 
   </head>
-  
   <body>
-  
+	<nav class="navbar navbar-default">
+		<div class="conteiner-fluid">
+			<ul class="nav navbar-nav">
+				<li class="active"><a href="#">Home</a></li>
+				<li><a href="#">My Photos</a></li>
+			</ul>
+		</div>
+	</nav>
+
+	<div class="container">
+		<h1>Hello welcome to my Bootstrap site!</h1>
+	</div>
     <script src="js/jquery.min.js"></script> <!-- jquery libraries -->
     <script src="js/bootstrap.min.js"></script> <!-- bootsrap libraries -->
 
