--- a/index.html
+++ b/index.html
@@ -14,18 +14,37 @@
 
   </head>
   <body>
-	<nav class="navbar navbar-default">
-		<div class="conteiner-fluid">
-			<ul class="nav navbar-nav">
-				<li class="active"><a href="#">Home</a></li>
-				<li><a href="#">My Photos</a></li>
-			</ul>
-		</div>
-	</nav>
+  <nav class="navbar navbar-default">
+    <div class="container-fluid">
+  
+      <!-- start collapsed navbar-->
+      <div class="navbar-header">
+        <button 
+        type="button" 
+        class="navbar-toggle collapsed" 
+        data-toggle="collapse" 
+        data-target="#main_navbar" 
+        aria-expanded="false">open!</button>
+      </div><!-- / collapsed navbar-->
 
-	<div class="container">
-		<h1>Hello welcome to my Bootstrap site!</h1>
-	</div>
+      <!-- start un-collapsed navbar-->
+      <div 
+         class="collapse navbar-collapse" 
+         id="main_navbar">
+        <ul class="nav navbar-nav">
+          <li class="active"><a href="index.html">Home</a></li>
+          <li><a href="#">Albums</a></li>
+          <li><a href="#">All photos</a></li>
+        </ul>
+      </div><!-- / un-collapsed navbar-->
+
+    </div> <!-- /container -->
+  </nav>
+
+    <div class="container">
+      <h1>Hello welcome to my boostrap site!</h1>
+      </div>
+
     <script src="js/jquery.min.js"></script> <!-- jquery libraries -->
     <script src="js/bootstrap.min.js"></script> <!-- bootsrap libraries -->
 
