--- a/photo1.html
+++ b/photo1.html
@@ -4,7 +4,7 @@
    <title></title>
 
     <link href="css/bootstrap.css" rel="stylesheet"> <!-- pulls in the main bootstrap content we need -->
-    
+    <link href="css/styles.css" rel="stylesheet">    
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -43,14 +43,8 @@
   </nav>
 
     <div class="container">
-      <h1>Hello welcome to my boostrap site!</h1>
-
-      <!-- start breadcrumb -->
-      <ol class="breadcrumb">
-        <li><a href="index.html">Home</a></li>
-      </ol>
-      <!-- / breadcrumb -->
-
+      <h1>Some Graffitti I found</h1>
+        <img class="single_photo" src="./images/img_1.jpg" alt="Grafitti"></a>
     </div>
     <script src="js/jquery.min.js"></script> <!-- jquery libraries -->
     <script src="js/bootstrap.min.js"></script> <!-- bootsrap libraries -->
