--- a/albums.html
+++ b/albums.html
@@ -4,7 +4,7 @@
    <title></title>
 
     <link href="css/bootstrap.css" rel="stylesheet"> <!-- pulls in the main bootstrap content we need -->
-    
+    <link href="css/styles.css" rel="stylesheet">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -43,15 +43,13 @@
   </nav>
 
     <div class="container">
-      <h1>Hello welcome to my boostrap site!</h1>
+      <h1>Hello are my albums</h1>
 
-      <!-- start breadcrumb -->
-      <ol class="breadcrumb">
-        <li><a href="index.html">Home</a></li>
-      </ol>
-      <!-- / breadcrumb -->
-
+      <a href="photos.html"><img class="album_cover" src="./images/img_1.jpg" alt="Grafitti"></a>
+      <img class="album_cover" src="./images/img_2.jpg" alt="Grafitti">
+      <img class="album_cover" src="./images/img_3.jpg" alt="Grafitti">
     </div>
+
     <script src="js/jquery.min.js"></script> <!-- jquery libraries -->
     <script src="js/bootstrap.min.js"></script> <!-- bootsrap libraries -->
 
