--- a/photo1.html
+++ b/photo1.html
@@ -33,7 +33,7 @@
          class="collapse navbar-collapse" 
          id="main_navbar">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="index.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="albums.html">Albums</a></li>
           <li><a href="photos.html">All photos</a></li>
         </ul>
@@ -43,6 +43,16 @@
   </nav>
 
     <div class="container">
+
+      <!-- start breadcrumb -->
+      <ol class="breadcrumb">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="albums.html">Albums</a></li>
+        <li><a href="photos.html">Graffitti Album</a></li>
+        <li class="active"><a href="photo1.html">Graffitti Picture</a></li>
+      </ol>
+      <!-- / breadcrumb -->
+
       <h1>Some Graffitti I found</h1>
         <img class="single_photo" src="./images/img_1.jpg" alt="Grafitti"></a>
     </div>
