--- a/albums.html
+++ b/albums.html
@@ -33,8 +33,8 @@
          class="collapse navbar-collapse" 
          id="main_navbar">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="index.html">Home</a></li>
-          <li><a href="albums.html">Albums</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li class="active"><a href="albums.html">Albums</a></li>
           <li><a href="photos.html">All photos</a></li>
         </ul>
       </div><!-- / un-collapsed navbar-->
@@ -43,6 +43,13 @@
   </nav>
 
     <div class="container">
+      <!-- start breadcrumb -->
+      <ol class="breadcrumb">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="albums.html">Albums</a></li>
+      </ol>
+      <!-- / breadcrumb -->
+
       <h1>Hello are my albums</h1>
 
       <a href="photos.html"><img class="album_cover" src="./images/img_1.jpg" alt="Grafitti"></a>
