--- a/photos.html
+++ b/photos.html
@@ -33,9 +33,9 @@
          class="collapse navbar-collapse" 
          id="main_navbar">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="index.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="albums.html">Albums</a></li>
-          <li><a href="photos.html">All photos</a></li>
+          <li  class="active"><a href="photos.html">All photos</a></li>
         </ul>
       </div><!-- / un-collapsed navbar-->
 
@@ -43,6 +43,15 @@
   </nav>
 
     <div class="container">
+      
+      <!-- start breadcrumb -->
+      <ol class="breadcrumb">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="albums.html">Albums</a></li>
+        <li><a href="photos.html">Graffitti Album</a></li>
+      </ol>
+      <!-- / breadcrumb -->
+
       <h1>Here are the photos:</h1>
       <a href="photo1.html"><img class="photo_list" src="./images/img_1.jpg" alt="Grafitti"></a>
       <a href="photo1.html"><img class="photo_list" src="./images/img_2.jpg" alt="Grafitti"></a>
