--- a/photos.html
+++ b/photos.html
@@ -53,12 +53,66 @@
       <!-- / breadcrumb -->
 
       <h1>Here are the photos:</h1>
-      <a href="photo1.html"><img class="photo_list" src="./images/img_1.jpg" alt="Grafitti"></a>
-      <a href="photo1.html"><img class="photo_list" src="./images/img_2.jpg" alt="Grafitti"></a>
-      <a href="photo1.html"><img class="photo_list" src="./images/img_3.jpg" alt="Grafitti"></a>
-      <a href="photo1.html"><img class="photo_list" src="./images/img_4.jpg" alt="Grafitti"></a>
-      <a href="photo1.html"><img class="photo_list" src="./images/img_5.jpg" alt="Grafitti"></a>
-    </div>
+      <div class="row">
+  <div class="col-xs-6 col-md-3 col-lg-2">
+      <a href="photo1.html"><img class="photo_list" src="./images/img_1.jpg" alt="graffiti cover image"/></a>
+  </div>
+  <div class="col-xs-6 col-md-3 col-lg-2">
+      <a href="photo1.html"><img class="photo_list" src="./images/img_6.jpg" alt="graffiti cover image"/></a>
+  </div>
+ <div class="col-xs-6 col-md-3  col-lg-2">
+      <a href="photo1.html"><img class="photo_list" src="./images/img_14.jpg" alt="graffiti cover image"/></a>
+  </div>
+   <div class="col-xs-6 col-md-3 col-lg-2">
+      <a href="photo1.html"><img class="photo_list" src="./images/img_3.jpg" alt="graffiti cover image"/></a>
+  </div>
+   <div class="col-xs-6 col-md-3 col-lg-2">
+      <a href="photo1.html"><img class="photo_list" src="./images/img_4.jpg" alt="graffiti cover image"/></a>
+  </div>
+   <div class="col-xs-6 col-md-3 col-lg-2">
+      <a href="photo1.html"><img class="photo_list" src="./images/img_5.jpg" alt="graffiti cover image"/></a>
+  </div>
+   <div class="col-xs-6 col-md-3 col-lg-2">
+      <a href="photo1.html"><img class="photo_list" src="./images/img_10.jpg" alt="graffiti cover image"/></a>
+  </div>
+  <div class="col-xs-6 col-md-3 col-lg-2">
+      <a href="photo1.html"><img class="photo_list" src="./images/img_16.jpg" alt="graffiti cover image"/></a>
+  </div>
+   <div class="col-xs-6 col-md-3 col-lg-2">
+      <a href="photo1.html"><img class="photo_list" src="./images/img_17.jpg" alt="graffiti cover image"/></a>
+  </div>
+  <div class="col-xs-6 col-md-3 col-lg-2">
+      <a href="photo1.html"><img class="photo_list" src="./images/img_8.jpg" alt="graffiti cover image"/></a>
+  </div>
+   <div class="col-xs-6 col-md-3 col-lg-2">
+      <a href="photo1.html"><img class="photo_list" src="./images/img_12.jpg" alt="graffiti cover image"/></a>
+  </div>
+  <div class="col-xs-6 col-md-3 col-lg-2">
+      <a href="photo1.html"><img class="photo_list" src="./images/img_13.jpg" alt="graffiti cover image"/></a>
+  </div>
+  <div class="col-xs-6 col-md-3 col-lg-2">
+      <a href="photo1.html"><img class="photo_list" src="./images/img_13.jpg" alt="graffiti cover image"/></a>
+  </div>
+   <div class="col-xs-6 col-md-3 col-lg-2">
+      <a href="photo1.html"><img class="photo_list" src="./images/img_18.jpg" alt="graffiti cover image"/></a>
+  </div>
+  <div class="col-xs-6 col-md-3 col-lg-2">
+      <a href="photo1.html"><img class="photo_list" src="./images/img_5.jpg" alt="graffiti cover image"/></a>
+  </div>
+  <div class="col-xs-6 col-md-3 col-lg-2">
+      <a href="photo1.html"><img class="photo_list" src="./images/img_18.jpg" alt="graffiti cover image"/></a>
+  </div>
+  <div class="col-xs-6 col-md-3 col-lg-2">
+      <a href="photo1.html"><img class="photo_list" src="./images/img_18.jpg" alt="graffiti cover image"/></a>
+  </div>
+  <div class="col-xs-6 col-md-3 col-lg-2">
+      <a href="photo1.html"><img class="photo_list" src="./images/img_6.jpg" alt="graffiti cover image"/></a>
+  </div>
+
+</div> <!-- / row -->
+
+    </div>  <!-- / end container -->
+
     <script src="js/jquery.min.js"></script> <!-- jquery libraries -->
     <script src="js/bootstrap.min.js"></script> <!-- bootsrap libraries -->
 
