--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
   
       <!-- start collapsed navbar-->
       <div class="navbar-header">
-        <button 
+        <button
         type="button" 
-        class="navbar-toggle collapsed" 
+        class="navbar-toggle collapsed btn btn-default" 
         data-toggle="collapse" 
         data-target="#main_navbar" 
         aria-expanded="false">open!</button>
@@ -43,13 +43,13 @@
   </nav>
 
     <div class="container">
-      <h1>Hello welcome to my boostrap site!</h1>
-
       <!-- start breadcrumb -->
-      <ol class="breadcrumb">
+      <ol class="breadcrumb width_bc">
         <li><a href="index.html">Home</a></li>
       </ol>
       <!-- / breadcrumb -->
+
+      <h1>Hello welcome to my boostrap site!</h1>
 
     </div>
     <script src="js/jquery.min.js"></script> <!-- jquery libraries -->
