--- a/photos.html
+++ b/photos.html
@@ -15,14 +15,14 @@
   </head>
   <body>
 
-  <nav class="navbar navbar-default">
+  <nav class="navbar navbar-inverse">
     <div class="container-fluid">
   
       <!-- start collapsed navbar-->
       <div class="navbar-header">
         <button 
         type="button" 
-        class="navbar-toggle collapsed" 
+        class="navbar-toggle collapsed btn btn-default" 
         data-toggle="collapse" 
         data-target="#main_navbar" 
         aria-expanded="false">open!</button>
@@ -45,13 +45,13 @@
     <div class="container">
       
       <!-- start breadcrumb -->
-      <ol class="breadcrumb">
+      <ol class="breadcrumb width_bc">
         <li><a href="index.html">Home</a></li>
         <li><a href="albums.html">Albums</a></li>
         <li><a href="photos.html">Graffitti Album</a></li>
       </ol>
       <!-- / breadcrumb -->
-
+      <div class="container jumbotron">
       <h1>Here are the photos:</h1>
       <div class="row">
   <div class="col-xs-6 col-md-3 col-lg-2">
@@ -110,8 +110,10 @@
   </div>
 
 </div> <!-- / row -->
-
+  
+    </div>
     </div>  <!-- / end container -->
+
 
     <script src="js/jquery.min.js"></script> <!-- jquery libraries -->
     <script src="js/bootstrap.min.js"></script> <!-- bootsrap libraries -->
