--- a/albums.html
+++ b/albums.html
@@ -15,14 +15,14 @@
   </head>
   <body>
 
-  <nav class="navbar navbar-default">
+  <nav class="navbar navbar-inverse">
     <div class="container-fluid">
   
       <!-- start collapsed navbar-->
       <div class="navbar-header">
         <button 
         type="button" 
-        class="navbar-toggle collapsed" 
+        class="navbar-toggle collapsed btn btn-default" 
         data-toggle="collapse" 
         data-target="#main_navbar" 
         aria-expanded="false">open!</button>
@@ -44,7 +44,7 @@
 
     <div class="container">
       <!-- start breadcrumb -->
-      <ol class="breadcrumb">
+      <ol class="breadcrumb width_bc">
         <li><a href="index.html">Home</a></li>
         <li><a href="albums.html">Albums</a></li>
       </ol>
