--- a/photo1.html
+++ b/photo1.html
@@ -15,14 +15,14 @@
   </head>
   <body>
 
-  <nav class="navbar navbar-default">
+  <nav class="navbar navbar-inverse">
     <div class="container-fluid">
   
       <!-- start collapsed navbar-->
       <div class="navbar-header">
         <button 
         type="button" 
-        class="navbar-toggle collapsed" 
+        class="navbar-toggle collapsed btn btn-default" 
         data-toggle="collapse" 
         data-target="#main_navbar" 
         aria-expanded="false">open!</button>
@@ -45,16 +45,18 @@
     <div class="container">
 
       <!-- start breadcrumb -->
-      <ol class="breadcrumb">
+      <ol class="breadcrumb width_bc">
         <li><a href="index.html">Home</a></li>
         <li><a href="albums.html">Albums</a></li>
         <li><a href="photos.html">Graffitti Album</a></li>
         <li class="active"><a href="photo1.html">Graffitti Picture</a></li>
       </ol>
       <!-- / breadcrumb -->
-
+    <div class="container jumbotron">
       <h1>Some Graffitti I found</h1>
         <img class="single_photo" src="./images/img_1.jpg" alt="Grafitti"></a>
+    </div>
+
     </div>
     <script src="js/jquery.min.js"></script> <!-- jquery libraries -->
     <script src="js/bootstrap.min.js"></script> <!-- bootsrap libraries -->
